--- a/42-bday-invite-website/03-anchor-elements/index.html
+++ b/42-bday-invite-website/03-anchor-elements/index.html
@@ -1,9 +1,9 @@
 <h1>My top 5 Favorite Websites</h1>
 <!-- Write your code below -->
-<ol>
+<ol start="5">
     <li><a href="https://www.reddit.com">Reddit</a></li>
-    <li>Humble Bundle</li>
-    <li>Github</li>
-    <li>linkedin</li>
-    <li>Advent of Code</li>
+    <li><a href="https://www.humblebundle.com/">Humble Bundle</a></li>
+    <li><a href="https://github.com">Github</a></li>
+    <li><a href="https://www.linkedin.com/">linkedin</a></li>
+    <li><a href="https://adventofcode.com/">Advent of Code</a></li>
 </ol>
