--- a/44-motivational-poster/index.html
+++ b/44-motivational-poster/index.html
@@ -14,3 +14,55 @@ But it must have the following features:
 6. Read about the text-transform property on MDN docs to make the h1 uppercase with CSS.
   https://developer.mozilla.org/en-US/docs/Web/CSS/text-transform 
 -->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Motivation</title>
+  <style>
+      html{
+          background-color: black;
+      }
+     div{
+         /*height: 200px;*/
+         /*width: 200px;*/
+     }
+     .motivation-img{
+         /*width: 50em;*/
+         width: 100%;
+         border: 5px solid white;
+         margin-top: 100px;
+     }
+
+    .poster {
+        background-color: black;
+        width: 50%;
+        margin-left: 25%;
+    }
+
+    h1{
+        color: white;
+        font-family: 'Libre Baskerville', serif;
+        text-transform: uppercase;
+        text-align: center;
+    }
+    p{
+        color: white;
+        text-align: center;
+    }
+  </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Honk&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="poster">
+        <img class="motivation-img" src="assets/images/bird-SHUT-meme-7.png" alt="bird mouth being shut by hand"/>
+        <h1>opinions</h1>
+        <p>Not Welcome Here</p>
+    </div>
+</body>
+</html>
+
