--- a/47-amazon-price-tracker/website.html
+++ b/47-amazon-price-tracker/website.html
@@ -1466,7 +1466,7 @@
                                                                                 <div
                                                                                     class="a-section a-spacing-base a-text-center">
                                                                                     <style type="text/css">
-                                                                                        /* Adding this CSS to overridden the green badging styles */
+                                                                                        /* Adding this CSS to overridden the green badging static */
                                                                                         #bmsmMessaging span.a-text-bold {
                                                                                             font-weight: normal !important;
                                                                                             background-color: #7fda69;
@@ -6891,7 +6891,7 @@
                                 </style>
                                 <style type="text/css">
                                     /**
- * Premium modules global styles
+ * Premium modules global static
  */
                                     .aplus-v2.desktop {
                                         max-width: 1464px;
