--- a/58-tindog-bootstrap/index.html
+++ b/58-tindog-bootstrap/index.html
@@ -21,7 +21,7 @@
   <section id="testimonial">
 
   </section>
-  <!-- Pricing -->
+  <!-- Pricing this is for pricing-->
   <section id="pricing">
 
   </section>
